[#9] User email activation with openapi-v3.1.0.yml
