# openapi-v3.1.0.yml
@@ -42,6 +42,58 @@ info:
   version: "1.0"
 openapi: 3.1.0
 paths:
+  /users/activate:
+    post:
+      description: |-
+        Verify the user's email by using the given 6-character long code.
+        If the code already expired, a new verification email will be sent with a new code.
+      parameters:
+      - description: Email
+        in: query
+        name: email
+        required: true
+        schema:
+          type: string
+      - description: Activation code
+        in: query
+        name: token
+        required: true
+        schema:
+          type: string
+      responses:
+        "200":
+          content:
+            application/json:
+              schema:
+                type: object
+          description: OK
+        "400":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/web-scraper_dev_internal_api_errors.Error'
+          description: Bad Request
+        "401":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/web-scraper_dev_internal_api_errors.Error'
+          description: Unauthorized
+        "409":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/web-scraper_dev_internal_api_errors.Error'
+          description: Conflict
+        "500":
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/web-scraper_dev_internal_api_errors.Error'
+          description: Internal Server Error
+      summary: Activate user
+      tags:
+      - users
   /users/sign-up:
     post:
       description: |-
